Final drawing + preview

--- a/christmas-night/index.html
+++ b/christmas-night/index.html
@@ -7,6 +7,15 @@
 </head>
 <body>
     <div class="container">
+
+        <!-- Shooting star -->
+        <div class="shooting-star shooting-star1"></div>
+        <div class="shooting-star shooting-star2"></div>
+        <div class="shooting-star shooting-star3"></div>
+        <div class="shooting-star shooting-star4"></div>
+        <div class="shooting-star shooting-star5"></div>
+
+        <!-- Sky -->
         <div class="moon"></div>
         <div class="star star1"></div>
         <div class="star star2"></div>
@@ -19,24 +28,35 @@
         <div class="star star9"></div>
         <div class="star star10"></div>
 
-        <div class="ball ball1"></div>
-        <div class="ball ball2"></div>
-        <div class="ball ball3"></div>
-        <div class="ball ball4"></div>
-        <div class="ball ball5"></div>
-        <div class="moon"></div> 
-        <div class="up-part"></div>
-        <div class="middle-part"></div>
-        <div class="down-part"></div>
-        <div class="pedestal"></div>
-
-        <div class="noeud1"></div>
-        <div class="noeud2"></div>
-        <div class="gift">
-            <div class="ruban1"></div>
-            <div class="ruban2"></div>
+        <!-- Gifts -->
+        <div class="node1"></div>
+        <div class="node2"></div>
+        <div class="gift1">
+            <div class="wrap1"></div>
+            <div class="wrap2"></div>
+        </div>
+        <div class="node3"></div>
+        <div class="node4"></div>
+        <div class="gift2">
+            <div class="wrap3"></div>
+            <div class="wrap4"></div>
         </div>
 
+        <!-- Christmas tree -->
+        <div class="up-part">
+            <div class="ball ball1"></div>
+        </div>
+        <div class="middle-part">
+            <div class="ball ball2"></div>
+            <div class="ball ball3"></div>
+        </div>
+        <div class="down-part">
+            <div class="ball ball4"></div>
+            <div class="ball ball5"></div>
+        </div>
+        <div class="pedestal"></div>
+
+        <!-- Snowman -->
         <div class="snowman head">
             <div class="left-eye"></div>
             <div class="right-eye"></div>
