--- a/christmas-night/index.html
+++ b/christmas-night/index.html
@@ -6,6 +6,7 @@
     <title>Christmas Night</title>
 </head>
 <body>
+
     <div class="container">
 
         <!-- Shooting star -->
@@ -68,3 +69,21 @@
         <div class="right-arm"></div>
     
     </div>
+
+    <footer>
+        <div class="credit-section">
+            <p class="credit">Drawing made by Nicolas Maillet</p>
+            <a href="https://github.com/Nicoji" rel="author" target="_blank">
+                <img src="https://img.icons8.com/windows/48/000000/github.png"/>
+            </a>
+            <a href="https://twitter.com/Nicoji_" rel="author" target="_blank">
+                <img src="https://img.icons8.com/color/48/000000/twitter.png"/>
+            </a>
+            <a href="https://www.linkedin.com/in/nicolasmaillet/" rel="author" target="_blank">
+                <img src="https://img.icons8.com/color/48/000000/linkedin.png"/>
+            </a>
+        </div>
+    </footer>
+
+    </body>
+    </html>
