Start to create Library and add audio

--- a/vinyl/index.html
+++ b/vinyl/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
 
-    <audio>
-        <source src="" type="audio/mpeg">
+    <audio autoplay>
+        <source src="song.mp3" type="audio/mpeg">
     </audio>
     
 
@@ -17,9 +17,9 @@
             <div class="reflection-left"></div>
             <div class="line"></div>
             <div class="center-disc">
-                <p class="text-up"></p>
+                <p class="text artist">Fat Larry's Band</p>
                 <div class="point"></div>
-                <p class="text-up"></p>
+                <p class="text song">Act Lik you Know</p>
             </div>
             <div class="reflection-right"></div>
         </div>
@@ -33,4 +33,8 @@
         <div class="mouthpiece"></div>
         <div class="button first-button"></div>
         <div class="button second-button"></div>
+    </div>
+
+    <div class="library">
+
     </div>
