--- a/vinyl/index.html
+++ b/vinyl/index.html
@@ -6,20 +6,14 @@
     <title>Vinyl</title>
 </head>
 <body>
-
-    <audio autoplay>
-        <source src="song.mp3" type="audio/mpeg">
-    </audio>
-    
-
+            
     <div class="disc-table">
-        <div class="disc">
+        <div class="socle-disc"></div>
+        <div class="disc hide">
             <div class="reflection-left"></div>
             <div class="line"></div>
             <div class="center-disc">
-                <p class="text artist">Fat Larry's Band</p>
                 <div class="point"></div>
-                <p class="text song">Act Lik you Know</p>
             </div>
             <div class="reflection-right"></div>
         </div>
@@ -31,10 +25,10 @@
         <div class="block"></div>
         <div class="stem"></div>
         <div class="mouthpiece"></div>
+        <div class="button start-button"></div>
         <div class="button first-button"></div>
         <div class="button second-button"></div>
     </div>
 
-    <div class="library">
-
-    </div>
+</body>
+</html>
